--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Discord Bot Services</title>
-<link rel="stylesheet" type="text/scss" href="/main.scss">
+<link rel="stylesheet" type="text/css" href="/main.scss">
 </head>
 <body>
 <div class="wrapper">
