--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <h3>Discord Bot Development Services</h3>
+<p class="title">Hover for more info.</p>
 <div class="wrapper">
   <div class="panel animated slideInDown">
     <img src="http://timruby.me/42c-icon.png" alt="" />
@@ -61,7 +63,5 @@
     </div>
   </div>
 </div>
-<p class="title">Simple Animated Service Panels &mdash; Hover each panel to reveal a list of services.</p>
-
 </body>
 </html>
